--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
 
  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt= "Sleepy cat">
+ 
+ <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt= "Sleepy cat">
 
 </body>
 </html>
