--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 </head>
 <body>
 
- <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt= "Sleepy cat">
+ <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
  
  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt= "Sleepy cat">
+ 
+ <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt= "Sleepy cat" title="Roar">
 
 </body>
 </html>
